[package]
name = "mv"
description = "Concurrent multiple readers, single writer data structures"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Erigara/mv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[[bench]]
name = "rollback"
harness = false

[[bench]]
name = "read_write"
harness = false

[dependencies]
concread = { version = "0.5", features = ["ebr", "maps"]}
serde = { version = "~1.0", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0.107"
